# bpf-verifier-rs

./: Cargo.toml  README.md  reproduce.sh
diff/: build.sh  harness.c
diff/stub/linux/: bits.h  compiler_types.h  kernel.h  limits.h  minmax.h  swab.h  types.h
src/: cnum.rs  lib.rs  proofs.rs  reduction.rs  state.rs  tnum.rs  transfer.rs
tests/: differential.rs
